vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeComparisonMismatchedCodeElmsSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPnLY5z9FjUlb5jc2yMmi7mVWyom/Qxhnik2Kre3kgF09oJLT0XX1JJ1z/IFrkfl1tL3LXolF
gbDaDQn+dYipaaAg9zzXyomnMh1UAcBAxbkEVWEMUYHyi55nlKfGhRfIXFyU4NWeds/3LhNTPoM3
c3KLHw4l5tchRRrmGQAyOgzpUqEIhCYbZvhQ2zFusVe0nyt0hE+W8wpQXzjQYpCKIdCMYIl568Yd
XOGCvS6EmgiZooNxGxXeIelYVqzd0SembIKr7kA3mRNhhFUazjL06gBQo9i0R0BsAvJjNEQ/5ZwF
9uDaTHXsLjIIkYbyDyinz+ObgIUqPo+Pj9LJQ32Lk0TuzaBypir4vFRGC6yIwbp7U9wK30bSkkXf
NntHg+GrCF139ZtYs0X/1IRsqGAQRgi4aDsDrqc9cV8w+vIlDA3Sxiqf8A01a8yJ37zHWw5w2j2w
/kaNnKlVjiQN9+d4yFTs6t0RnnpBYbVqCfOhfsxGhe0FJGgqmil2XzqXRPOMMn0VGtkX41tJnkSL
i/E7HejlGfelUXC9GqIegAxoDBFk8l7qqTbnt9HKprQv8yhS9EitcZa86VnC+NsBnFmKQ91Dnh/D
/UvCJCNU1g431O/HEyZtTOowdEnZgYJZVMC+xbODb41xrJZTiXD7UUJo/nOOX6CsZwGQvxVO8aHR
NPqcDSon/Xojf8gk5cGiKUu2kPn2q4qMT+n0fTJsXaxgSp9IVKXK9k8rXyivLqIgvUxhSlEAaGD2
9s+T/IRVZNm+MiQNBWFKD5IqH/iIyqFrR7yVgWOJFfsXSha9mi2B2Bno9Vn8opE7OIs5c99qk/uF
cNNeDNDgzuKTUuDyXI7KHLH++wE9zVYwe8GKxoJTeqBlPL9qboumGiv7CU1lZuKthEdbARCNunYu
xNRBA7YT0gtq7nv8wE7ezgpsXFKlbKL6M8092Qy5/ZM/mUi/s3uZ6/hBqEmXATx1vUvSRMSbyuA/
0aUkRWXz8+dYMgoJxHDMBdTaSnLufP+J6OATX3kAOpFZ+jhsT8NQYoeuVUkU/0plA5wUKuvtOqqm
qFMBmH3rzmaFZxK0Fm7AbSJbxmg4QF/wL2A1BySFgYglpu4z1P5H+hEFnvYJlMmco55GfKAIIsxn
msqgzJCBozy0aZEQe1vB55YySyKgU5MASJhBks2CCKQ1QlDbYu4weuaRWj4K+YNDvfPATvYP85bP
CRUc5wiF5RnQYNXGOgDydRQ5PSKQns4/p25FeQBjMuwzvVjIlC3x1ghbZ/D+mwdCPMTQ3rnIQyE3
P2mho6lB3DYYaqpg/Che755XaFSDmtohgmn6E+BrbNYT/92TYN8Y4hO//GsCiuarKUjcFY7Na4Bf
Mqhdo2phyCVQcpZjAKbMoh7M3/V8aNjjdW07Zr9y+03AjDYyekzDfdISkhPjn/8dd8yckevGk/t7
VjFGAXk55k7zb+GuoFZTyShD4PFrF/RgOWPeOz4FsexjsWqjJ811nKGpi4TdTdiKcq+rFWiammlV
dMSmJN5rUsseJKebG4iz68s760C8PnRykd6ZEVARol9Tf29O9/Xp0seJpDCvZnDBEoaXhj5hpYmi
mI0DhoR7SGuA88BUx+pTDZLlGHduubAG2lyn1FHwmycu8W2p3p7IWPTtWqArJJah/bXDbFEFGGLn
jim4wtq=